--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "def3-alonsomauricio",
+  "name": "ecommerce-alonsomauricio",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
