--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,6 @@
 PORT=8080
-SECRET_KEY=coder123
 MONGO_URL= mongodb+srv://mauricioalonso:12345qwert@cluster0.frgywur.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=ecommerce
 
 
-
+# en consola, estar en el directorio raíz ( en /src) y tipear: node ./src/app.js -m production
