listo lo básico de ENV

--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,11 @@
 PORT=3050
 MONGO_URL= mongodb+srv://contaalonso:12345qwert@cluster0.k4sa2ya.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=ecommercePRUEBA
+ADMIN_USER= CoderPrueba
+ADMIN_EMAIL= adminCoderPrueba@coder.com
+ADMIN_PASSWORD= adminCod3r123
+
+
 
 # en consola, estar en el directorio raíz ( en /src) y tipear: node ./src/app.js -m development
 # EN ESTE MODO NO FUNCIONA EL LOGIN DE GITHUB, PORQUE ESTÁ CONFIGURADO PARA EL PUERTO 8080
