--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,8 @@
 PORT=8080
 MONGO_URL= mongodb+srv://mauricioalonso:12345qwert@cluster0.frgywur.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=ecommerce
-
+ADMIN_USER= Coder
+ADMIN_EMAIL= adminCoder@coder.com
+ADMIN_PASSWORD= adminCod3r123
 
 # en consola, estar en el directorio raíz ( en /src) y tipear: node ./src/app.js -m production
