--- a/.env.development
+++ b/.env.development
@@ -1,11 +1,15 @@
 PORT=3050
 MONGO_URL= mongodb+srv://contaalonso:12345qwert@cluster0.k4sa2ya.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=ecommercePRUEBA
+# ----- ADMINISTRADOR CODER
 ADMIN_USER= CoderPrueba
 ADMIN_EMAIL= adminCoderPrueba@coder.com
 ADMIN_PASSWORD= adminCod3r123
+# ----- PARA EL LOGIN CON GITHUB
+CLIENT_ID= Iv1.217db8a8968b4d80
+CLIENT_SECRECT= d4795dc227745e8a68d6793128fc8a37de63d8e1
+CALLBACK_URL= http://localhost:3050/api/sessions/callbackGithub
 
 
 
 # en consola, estar en el directorio raíz ( en /src) y tipear: node ./src/app.js -m development
-# EN ESTE MODO NO FUNCIONA EL LOGIN DE GITHUB, PORQUE ESTÁ CONFIGURADO PARA EL PUERTO 8080
