lista la clave secreta de sessions en ENV

--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,8 @@ PORT=8080
 MONGO_URL= mongodb+srv://mauricioalonso:12345qwert@cluster0.frgywur.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=ecommerce
 # ----- ADMINISTRADOR CODER
+SESSIONS_PASSWORD= claveSecretaDevelopment
+# ----- ADMINISTRADOR CODER
 ADMIN_USER= Coder
 ADMIN_EMAIL= adminCoder@coder.com
 ADMIN_PASSWORD= adminCod3r123
