--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,8 @@ PORT=3050
 MONGO_URL= mongodb+srv://contaalonso:12345qwert@cluster0.k4sa2ya.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=ecommercePRUEBA
 # ----- ADMINISTRADOR CODER
+SESSIONS_PASSWORD= claveSecretaDevelopment
+# ----- ADMINISTRADOR CODER
 ADMIN_USER= CoderPrueba
 ADMIN_EMAIL= adminCoderPrueba@coder.com
 ADMIN_PASSWORD= adminCod3r123
