--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=8080
-SECRET_KEY=coder123
+# SECRET_KEY=coder123
 MONGO_URL= mongodb+srv://mauricioalonso:12345qwert@cluster0.frgywur.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=ecommerce
 
