arreglado lo de sessions

--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@ PORT=8080
 MONGO_URL= mongodb+srv://mauricioalonso:12345qwert@cluster0.frgywur.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=ecommerce
 # ----- ADMINISTRADOR CODER
-SESSIONS_PASSWORD= claveSecretaDevelopment
+SESSIONS_PASSWORD= claveSecreta
 # ----- ADMINISTRADOR CODER
 ADMIN_USER= Coder
 ADMIN_EMAIL= adminCoder@coder.com
